--- a/vanillaJS/index.html
+++ b/vanillaJS/index.html
@@ -8,6 +8,18 @@
     <title>myWeather</title>
 </head>
 <body>
+    <div class="location">
+        <h1 class="location-timezone">Timezone</h1>
+        <p>Icon</p>
+    </div>
+    <div class="temperature">
+        <div class="degree-section">
+            <h2 class="degree">34</h2>
+            <span>C</span>
+        </div>
+        <div class="temperature-description">hot 🥵</div>
+    </div>
+
     <script src="./app.js"></script>
 </body>
 </html>
