--- a/vanillaJS/index.html
+++ b/vanillaJS/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,19 +8,21 @@
     <link rel="stylesheet" href="./style.css">
     <title>myWeather</title>
 </head>
+
 <body>
     <div class="location">
-        <h1 class="location-timezone">Timezone</h1>
+        <h1 class="location-timezone"></h1>
         <p>Icon</p>
     </div>
     <div class="temperature">
         <div class="degree-section">
-            <h2 class="degree">34</h2>
-            <span>C</span>
+            <h2 class="temperature-degree"></h2>
+            <span>°C</span>
         </div>
-        <div class="temperature-description">hot 🥵</div>
+        <div class="temperature-description"></div>
     </div>
 
     <script src="./app.js"></script>
 </body>
+
 </html>
