--- a/vanillaJS/index.html
+++ b/vanillaJS/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="location">
         <h1 class="location-timezone"></h1>
-        <p>Icon</p>
+        <div class="icon"></div>
     </div>
     <div class="temperature">
         <div class="degree-section">
